# runwhen-platform-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  MANIFEST.in  README.md  gemini-extension.json  mcp-multi-env.json  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.json
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.cursor/rules/: skill-management.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  docker.yaml  pypi.yaml  release.yml  test.yml
agents/: runwhen-codecollection-author.md  runwhen-sre.md  runwhen-task-builder.md
deploy/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs/: testing-plan.md
docs/plans/: 2026-04-28-script-vars-design.md
docs/plans/archive/: 2026-04-28-runtime-vars-plan.md
rules/: keep-readme-updated.mdc  runwhen-infrastructure.mdc  runwhen-task-contract.mdc
runwhen_platform_mcp/: __init__.py  auth.py  authorization.py  consent_ui.py  server.py  tool_trace.py
runwhen_platform_mcp/docs/: RUNWHEN.md.example  RUNWHEN.md.template  tool-builder-flow.md
scripts/: smoke_mcp_papi.py
skills/: __init__.py
skills/build-operational-context/: SKILL.md
skills/build-runwhen-task/: SKILL.md
skills/build-runwhen-task/references/: bash-sli-template.sh  bash-task-template.sh  commit-examples.md  python-sli-template.py  python-task-template.py
skills/configure-hierarchy/: SKILL.md
skills/configure-resource-path/: SKILL.md
skills/create-ai-assistant/: SKILL.md
skills/decompose-skill-for-runwhen/: SKILL.md
skills/discover-locations/: SKILL.md
skills/discover-secrets/: SKILL.md
skills/find-and-deploy-codebundle/: SKILL.md
skills/manage-commands/: SKILL.md
skills/manage-knowledge/: SKILL.md
skills/manage-rules/: SKILL.md
skills/run-existing-slx/: SKILL.md
skills/runwhen-task-authoring/: SKILL.md
skills/runwhen-task-authoring/references/: context_probe.py  gen_env.sh  run_local.sh  slx_preamble.py
skills/verify-mcp-setup/: SKILL.md
tests/: __init__.py  test_api_compat.py  test_chat_url.py  test_mcp_http_remote_smoke.py  test_papi_live_smoke.py  test_resolve_script.py  test_smoke.py  test_tool_builder_config.py  test_tool_builder_e2e.py  test_tool_schema.py  test_tool_trace.py  test_validation.py  test_yaml_generation.py
