[build-system]
requires = [
    "setuptools>=61.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "runwhen-platform-mcp"
description = "RunWhen Platform MCP Server — exposes workspace chat, issues, SLXs, run sessions, and Tool Builder (script run/commit) to MCP clients (Cursor, Claude Desktop, etc.)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "RunWhen", email = "info@runwhen.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[project.scripts]
runwhen-mcp = "runwhen_platform_mcp.server:main"

[project.urls]
homepage = "https://github.com/runwhen-contrib/runwhen-platform-mcp"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
runwhen_platform_mcp = ["docs/*.md", "docs/*.template", "docs/*.example"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }
