[build-system]
requires = [
    "setuptools>=61.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "runwhen-platform-mcp"
description = "RunWhen Platform MCP Server — exposes workspace chat, issues, SLXs, run sessions, and Tool Builder (script run/commit) to MCP clients (Cursor, Claude Desktop, etc.)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "RunWhen", email = "info@runwhen.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[project.scripts]
runwhen-platform-mcp = "runwhen_platform_mcp.server:main"

[project.urls]
homepage = "https://github.com/runwhen-contrib/runwhen-platform-mcp"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
runwhen_platform_mcp = ["docs/*.md", "docs/*.template", "docs/*.example"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.15",
    "types-PyYAML>=6.0",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "runwhen_platform_mcp.server"
warn_return_any = false
